fixes spacing below image

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,17 @@
 html {
     font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.container {
+    margin: 10px;
+}
+
+h1 {
+    background-color: firebrick;
+    color: white;
+    text-align: center;
+    padding: 10px;
 }
 
 img {
@@ -7,10 +19,19 @@ img {
     max-width: 150px;
     float: left;
     margin-right: 10px;
+    margin-bottom: 15px;
 }
 
 p {
     line-height: 25px;
+}
+
+dl {
+   clear: both; 
+   background-color: firebrick;
+   color: white;
+   padding: 10px;
+   margin-top: 10px;
 }
 
 dt {
